--- a/data analysis.ipynb
+++ b/data analysis.ipynb
@@ -1,8 +1,33 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# US suicide rate by different gender and race\n",
+    "\n",
+    "                                                    z5404167/ Celine Wong"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dataset  \n",
+    "- Resource: data.gov.com\n",
+    "- Total 6391 entries\n",
+    "- Data collection date: 1950  -  2018\n",
+    "- Location: US\n",
+    "- Race: White/ Black or African American/ Asian or Pacific Islander/American Indian or Alaska Native\n",
+    "- Gender: Male/Female\n",
+    "- All ages\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -22,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -52,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "editable": true,
     "jupyter": {
@@ -70,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -78,16 +103,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "loading from file\n",
-      "done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if os.path.isfile(\"Death_rates_for_suicide__by_sex__race__Hispanic_origin__and_age__United_States copy.csv\"):\n",
     "    filepath = \"Death_rates_for_suicide__by_sex__race__Hispanic_origin__and_age__United_States copy.csv\"\n",
@@ -344,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "editable": true,
     "jupyter": {
@@ -1645,6 +1661,65 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What happened in 2000?\n",
+    "December 12 – U.S. presidential election, 2000 – Bush v. Gore: The U.S. Supreme Court overturns the ruling by the Florida Supreme Court, ending the recount and effectively giving the state, and the Presidency, to Texas Governor George W. Bush."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What happened in 1950 - 2018?\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Major events\n",
+    "\n",
+    "1950-1953: Korean War \n",
+    "\n",
+    "1954: Brown v. Board of Education - The Supreme Court ruled that racial segregation in public schools was unconstitutional, marking a major milestone in the civil rights movement.\n",
+    "\n",
+    "1965: Vietnam War - U.S. sends troops to Vietnam \n",
+    "\n",
+    "1968: Civil Rights Act of 1968 - This legislation prohibited housing discrimination based on race, religion, national origin, and gender.\n",
+    "\n",
+    "1969: Apollo 11 Moon Landing - The United States became the first and only nation to land astronauts on the moon. \n",
+    "\n",
+    "1995: Oklahoma City Bombing \n",
+    "\n",
+    "2001: September 11 Attacks \n",
+    "\n",
+    "2008: Financial Crisis\n",
+    "\n",
+    "2010: Affordable Care Act\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![recessionsfigure](recessionsfigure.jpg)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![GDP](united-states-gdp-gross-domestic-product-2023-08-11-macrotrends.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -2642,7 +2717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2667,7 +2742,7 @@
     }
    ],
    "source": [
-    "male_suiciderate_allages.plot(x='YEAR', y='ESTIMATE')"
+    "male_suiciderate_allages.plot(x='YEAR', y='MALE SUICIDE RATE')"
    ]
   },
   {
