--- a/data analysis.ipynb
+++ b/data analysis.ipynb
@@ -3,7 +3,13 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "# US suicide rate by different gender and race\n",
     "\n",
@@ -13,7 +19,13 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "# Dataset  \n",
     "- Resource: data.gov.com\n",
@@ -30,8 +42,11 @@
    "execution_count": null,
    "metadata": {
     "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -51,7 +66,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -66,7 +81,7 @@
    "metadata": {
     "editable": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -80,11 +95,8 @@
    "execution_count": null,
    "metadata": {
     "editable": true,
-    "jupyter": {
-     "source_hidden": true
-    },
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -98,8 +110,11 @@
    "execution_count": null,
    "metadata": {
     "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -120,10 +135,15 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "collapsed": true,
     "editable": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
     "scrolled": true,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     },
     "tags": []
    },
@@ -366,6 +386,7 @@
     "jupyter": {
      "source_hidden": true
     },
+    "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     },
@@ -640,7 +661,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1634,7 +1661,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1663,7 +1696,13 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "# What happened in 2000?\n",
     "December 12 – U.S. presidential election, 2000 – Bush v. Gore: The U.S. Supreme Court overturns the ruling by the Florida Supreme Court, ending the recount and effectively giving the state, and the Presidency, to Texas Governor George W. Bush."
@@ -1672,7 +1711,13 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "# What happened in 1950 - 2018?\n"
    ]
@@ -1680,7 +1725,13 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "# Major events\n",
     "\n",
@@ -1706,7 +1757,13 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "![recessionsfigure](recessionsfigure.jpg)"
    ]
@@ -1714,7 +1771,13 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "![GDP](united-states-gdp-gross-domestic-product-2023-08-11-macrotrends.png)"
    ]
@@ -1722,7 +1785,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2718,7 +2787,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2748,7 +2823,16 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -3744,7 +3828,13 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -3774,7 +3864,14 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -3812,9 +3909,39 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Why men have a higher suicide rate?\n",
+    "- Women tend to have higher rates of depression diagnoses.\n",
+    "- Adult women in the US reported a suicide attempt 1.2 times as often as men.\n",
+    "- But male suicide methods are often more violent, making them more likely to be completed before anyone can intervene.\n",
+    "- Study found general primary care consultation rates were 32% lower in men than women.\n",
+    "- Men are nearly twice as likely as women to meet criteria for alcohol dependence. But drinking can deepen depression and increase impulsive behaviours and alcoholism is a known risk factor for suicide."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -4832,7 +4959,16 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -5894,7 +6030,16 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -6956,7 +7101,17 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -7995,7 +8150,16 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -8037,7 +8201,19 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -9055,7 +9231,14 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -10117,7 +10300,18 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "editable": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -11179,7 +11373,16 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -12218,7 +12421,17 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -12257,7 +12470,17 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -13223,7 +13446,13 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -13272,7 +13501,14 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -14236,7 +14472,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "plt.figure()\n",
@@ -14274,7 +14516,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "female10_14suiciderate = suiciderate_data[suiciderate_data.STUB_LABEL == \"Female: 10-14 years\"]#.ESTIMATE.plot()\n",
@@ -14300,7 +14548,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "jupyter": {
+     "source_hidden": true
+    },
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "plt.figure()\n",
@@ -14331,27 +14588,6 @@
     "# Adding a legend\n",
     "plt.legend()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
