--- a/data analysis.ipynb
+++ b/data analysis.ipynb
@@ -1734,7 +1734,6 @@
    },
    "source": [
     "# Major events\n",
-    "\n",
     "1950-1953: Korean War \n",
     "\n",
     "1954: Brown v. Board of Education - The Supreme Court ruled that racial segregation in public schools was unconstitutional, marking a major milestone in the civil rights movement.\n",
@@ -14587,6 +14586,27 @@
     "\n",
     "# Adding a legend\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "editable": true,
+    "jp-MarkdownHeadingCollapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Why Older adults are especially vulnerable to suicide?\n",
+    " Loneliness has been found to top the list.\n",
+    "- Grief over lost loved ones\n",
+    "- Loss of self-sufficiency\n",
+    "- Chronic illness and pain\n",
+    "- Cognitive impairment\n",
+    "- Financial troubles"
    ]
   }
  ],
